design and database setup

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,13 @@
+# Database
+POSTGRES_USER=task_user
+POSTGRES_PASSWORD=task_pass
+POSTGRES_DB=task_manager
+POSTGRES_HOST=localhost
+POSTGRES_PORT=5432
+
+# App
+PORT=3000
+NODE_ENV=development
 # Server
 PORT=3000
 NODE_ENV=development
