--- a/package.json
+++ b/package.json
@@ -5,20 +5,25 @@
   "main": "dist/index.js",
   "type": "module",
   "scripts": {
-    "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
+    "dev": "tsx watch src/index.ts",
     "build": "tsc -p .",
     "start": "node dist/index.js",
     "lint": "eslint 'src/**/*.{ts,tsx}' --max-warnings=0",
     "format": "prettier --write \"src/**/*.{ts,tsx,json,md}\"",
     "test": "jest --passWithNoTests --runInBand",
+    "db:docker": "docker-compose up -d",
+    "db:docker:down": "docker-compose down -v",
+    "db:migrate": "node ./scripts/run-migrations.js",
+    "db:seed": "node ./scripts/run-seed.js",
+    "db:reset": "npm run db:docker:down && npm run db:docker && npm run db:migrate && npm run db:seed",
     "type-check": "tsc -p . --noEmit"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.0.0",
     "express": "^4.18.2",
-    "pg": "^8.10.0",
     "jsonwebtoken": "^9.0.0",
-    "bcryptjs": "^2.4.3",
+    "pg": "^8.10.0",
     "zod": "^4.1.9"
   },
   "devDependencies": {
@@ -26,6 +31,8 @@
     "@types/jest": "^29.5.2",
     "@types/node": "^20.4.2",
     "@types/supertest": "^2.0.12",
+    "@typescript-eslint/eslint-plugin": "^6.7.0",
+    "@typescript-eslint/parser": "^6.7.0",
     "eslint": "^8.46.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.2.0",
@@ -34,8 +41,7 @@
     "supertest": "^7.1.4",
     "ts-jest": "^29.1.0",
     "ts-node-dev": "^2.0.0",
-    "typescript": "^5.5.2",
-    "@typescript-eslint/eslint-plugin": "^6.7.0",
-    "@typescript-eslint/parser": "^6.7.0"
+    "tsx": "^4.20.5",
+    "typescript": "^5.5.2"
   }
 }
