--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "dev": "tsx watch src/index.ts",
     "build": "tsc -p .",
     "start": "node dist/index.js",
-    "lint": "eslint 'src/**/*.{ts,tsx}' --max-warnings=0",
-    "format": "prettier --write \"src/**/*.{ts,tsx,json,md}\"",
+    "lint": "eslint '{src,tests}/**/*.{ts,tsx}' --max-warnings=0",
+    "format": "prettier --write \"{src,tests}/**/*.{ts,tsx,json,md}\"",
     "test": "jest --passWithNoTests --runInBand",
     "db:docker": "docker-compose up -d",
     "db:docker:down": "docker-compose down -v",
