--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
     "lint": "eslint '{src,tests}/**/*.{ts,tsx}' --max-warnings=0",
     "format": "prettier --write \"{src,tests}/**/*.{ts,tsx,json,md}\"",
     "test": "jest --passWithNoTests --runInBand",
+    "test:coverage": "jest --coverage --passWithNoTests --runInBand",
+    "test:watch": "jest --watch --passWithNoTests --runInBand",
+    "test:debug": "node --inspect-brk node_modules/.bin/jest --runInBand",
+    "perf:test": "artillery run performance/load-test.yml",
     "db:docker": "docker-compose up -d",
     "db:docker:down": "docker-compose down -v",
     "db:migrate": "node ./scripts/run-migrations.js",
@@ -20,21 +24,37 @@
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
+    "compression": "^1.8.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.18.2",
+    "express-rate-limit": "^8.1.0",
+    "helmet": "^8.1.0",
+    "ioredis": "^5.7.0",
     "jsonwebtoken": "^9.0.0",
+    "morgan": "^1.10.1",
     "pg": "^8.10.0",
+    "redis": "^5.8.2",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
+    "winston": "^3.17.0",
     "zod": "^4.1.9"
   },
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
+    "@types/compression": "^1.8.1",
+    "@types/cors": "^2.8.19",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/jsonwebtoken": "^9.0.10",
+    "@types/morgan": "^1.9.10",
     "@types/node": "^20.4.2",
     "@types/supertest": "^2.0.12",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.8",
     "@typescript-eslint/eslint-plugin": "^6.7.0",
     "@typescript-eslint/parser": "^6.7.0",
+    "artillery": "^2.0.25",
     "eslint": "^8.46.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.2.0",
