feat: update package.json to use concurrently

--- a/package.json
+++ b/package.json
@@ -5,8 +5,12 @@
   "main": "dist/index.js",
   "type": "module",
   "scripts": {
-    "dev": "tsx watch src/index.ts",
-    "build": "tsc -p .",
+    "dev": "concurrently \"npm run dev:backend\" \"npm run dev:frontend\"",
+    "dev:backend": "tsx watch src/index.ts",
+    "dev:frontend": "cd frontend && npm run dev",
+    "build": "npm run build:backend && npm run build:frontend",
+    "build:backend": "tsc -p .",
+    "build:frontend": "cd frontend && npm run build",
     "start": "node dist/index.js",
     "lint": "eslint '{src,tests}/**/*.{ts,tsx}' --max-warnings=0",
     "format": "prettier --write \"{src,tests}/**/*.{ts,tsx,json,md}\"",
@@ -14,6 +18,9 @@
     "test:coverage": "jest --coverage --passWithNoTests --runInBand",
     "test:watch": "jest --watch --passWithNoTests --runInBand",
     "test:debug": "node --inspect-brk node_modules/.bin/jest --runInBand",
+    "test:all": "npm run test && cd frontend && npm run test",
+    "install:all": "npm install && cd frontend && npm install",
+    "lint:all": "npm run lint && cd frontend && npm run lint",
     "perf:test": "artillery run performance/load-test.yml",
     "db:docker": "docker-compose up -d",
     "db:docker:down": "docker-compose down -v",
@@ -55,6 +62,7 @@
     "@typescript-eslint/eslint-plugin": "^6.7.0",
     "@typescript-eslint/parser": "^6.7.0",
     "artillery": "^2.0.25",
+    "concurrently": "^9.2.1",
     "eslint": "^8.46.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.2.0",
