--- a/.env.example
+++ b/.env.example
@@ -1,19 +1,29 @@
-# Database
+# Database Configuration
 POSTGRES_USER=task_user
 POSTGRES_PASSWORD=task_pass
 POSTGRES_DB=task_manager
 POSTGRES_HOST=localhost
 POSTGRES_PORT=5432
+DATABASE_URL=postgres://task_user:task_pass@localhost:5432/task_manager
 
-# App
+# Server Configuration
 PORT=3000
 NODE_ENV=development
-# Server
-PORT=3000
-NODE_ENV=development
 
-# Database
-DATABASE_URL=postgres://user:password@localhost:5432/task_manager_dev
+# JWT Configuration
+# Generate a strong secret: openssl rand -base64 32
+JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
+JWT_EXPIRES=1h
 
-# JWT
-JWT_SECRET=replace_this_with_a_strong_secret
+# CORS Configuration
+# In production, set this to your frontend domain (e.g., https://yourdomain.com)
+CORS_ORIGIN=http://localhost:5173
+
+# Logging
+LOG_LEVEL=info
+
+# Rate Limiting (optional - disable in dev if needed)
+DISABLE_RATE_LIMITING=false
+
+# Database Connection Pool
+PG_MAX_CLIENTS=10
