feat: add request timeout middleware and update environment validation

--- a/.env.example
+++ b/.env.example
@@ -25,5 +25,8 @@ LOG_LEVEL=info
 # Rate Limiting (optional - disable in dev if needed)
 DISABLE_RATE_LIMITING=false
 
+# Request Timeout (milliseconds, default: 30000)
+REQUEST_TIMEOUT_MS=30000
+
 # Database Connection Pool
 PG_MAX_CLIENTS=10
