--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "build:frontend": "cd frontend && npm run build",
     "start": "node dist/index.js",
     "lint": "eslint '{src,tests}/**/*.{ts,tsx}' --max-warnings=0",
+    "lint:fix": "eslint '{src,tests}/**/*.{ts,tsx}' --max-warnings=0 --fix",
     "format": "prettier --write \"{src,tests}/**/*.{ts,tsx,json,md}\"",
     "test": "jest --passWithNoTests --runInBand",
     "test:coverage": "jest --coverage --passWithNoTests --runInBand",
