--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "db:docker": "docker-compose up -d",
     "db:docker:down": "docker-compose down -v",
     "db:migrate": "node ./scripts/run-migrations.js",
+    "db:migrate:status": "node ./scripts/check-migrations.js",
     "db:seed": "node ./scripts/run-seed.js",
     "db:reset": "npm run db:docker:down && npm run db:docker && npm run db:migrate && npm run db:seed",
     "type-check": "tsc -p . --noEmit"
