--- a/.env.example
+++ b/.env.example
@@ -30,3 +30,9 @@ REQUEST_TIMEOUT_MS=30000
 
 # Database Connection Pool
 PG_MAX_CLIENTS=10
+
+# Database Connection Retry (optional)
+# Maximum number of connection retry attempts on startup (default: 5)
+DB_MAX_RETRIES=5
+# Initial delay between retries in milliseconds (default: 1000)
+DB_RETRY_INITIAL_DELAY_MS=1000
