feat: add load testing configuration and scripts for performance validation

--- a/.env.example
+++ b/.env.example
@@ -36,3 +36,9 @@ PG_MAX_CLIENTS=10
 DB_MAX_RETRIES=5
 # Initial delay between retries in milliseconds (default: 1000)
 DB_RETRY_INITIAL_DELAY_MS=1000
+
+# Load Testing Configuration (optional)
+# Target URL for load tests (defaults to http://localhost:3000)
+TEST_TARGET_URL=http://localhost:3000
+# Environment for load tests: local, staging, production
+TEST_ENV=local
