--- a/package.json
+++ b/package.json
@@ -22,7 +22,11 @@
     "test:all": "npm run test && cd frontend && npm run test",
     "install:all": "npm install && cd frontend && npm install",
     "lint:all": "npm run lint && cd frontend && npm run lint",
-    "perf:test": "artillery run performance/load-test.yml",
+    "perf:validate": "node scripts/validate-load-test.js",
+    "perf:setup": "node scripts/setup-load-test-user.js",
+    "perf:test": "npm run perf:validate && npx artillery run performance/load-test.yml",
+    "perf:test:smoke": "npm run perf:validate && npx artillery run performance/smoke-test.yml",
+    "perf:test:report": "npm run perf:validate && npx artillery run --output performance/report.json performance/load-test.yml && npx artillery report performance/report.json",
     "db:docker": "docker-compose up -d",
     "db:docker:down": "docker-compose down -v",
     "db:migrate": "node ./scripts/run-migrations.js",
